# Implementation/bitflow-backend-parent/bitflow-backend-api/src/gen/java/de/cit/backend/api/ProjectApi.java
@@ -13,6 +13,7 @@ import javax.ws.rs.core.SecurityContext;
 
 import de.cit.backend.api.factories.ProjectApiServiceFactory;
 import de.cit.backend.api.model.Pipeline;
+import de.cit.backend.api.model.PipelineHistory;
 import de.cit.backend.api.model.Project;
 import de.cit.backend.api.model.User;
 import de.cit.backend.mgmt.AuthLevel;
@@ -27,6 +28,56 @@ import io.swagger.annotations.ApiParam;
 public class ProjectApi  {
    private final ProjectApiService delegate = ProjectApiServiceFactory.getProjectApi();
 
+   @GET
+   @AuthLevel(UserRoleEnum.STANDARD)
+   @Path("/{projectId}/pipeline/{pipelineId}/history")
+   @Consumes({ "application/json", "application/xml" })
+   @Produces({ "application/json" })
+   @io.swagger.annotations.ApiOperation(value = "Get execution history.", notes = "Query the status, date and duration of each pipeline execution.", response = PipelineHistory.class, responseContainer = "List", authorizations = {
+       @io.swagger.annotations.Authorization(value = "BasicAuth")
+   }, tags={ "pipeline", })
+   @io.swagger.annotations.ApiResponses(value = { 
+       @io.swagger.annotations.ApiResponse(code = 200, message = "Pipeline infos", response = PipelineHistory.class, responseContainer = "List"),
+       
+       @io.swagger.annotations.ApiResponse(code = 400, message = "If the user has no access to that project", response = PipelineHistory.class, responseContainer = "List"),
+       
+       @io.swagger.annotations.ApiResponse(code = 404, message = "If the project with the given id does not exist.", response = PipelineHistory.class, responseContainer = "List") })
+   public Response projectProjectIdPipelinePipelineIdHistoryGet( @PathParam("projectId") Integer projectId, @PathParam("pipelineId") Integer pipelineId,@Context SecurityContext securityContext)
+   throws NotFoundException {
+       return delegate.projectProjectIdPipelinePipelineIdHistoryGet(projectId,pipelineId,securityContext);
+   }
+   
+   @POST
+   @AuthLevel(UserRoleEnum.STANDARD)
+   @Path("/{id}")
+   @Consumes({ "application/json", "application/xml" })
+   @Produces({ "application/json" })
+   @io.swagger.annotations.ApiOperation(value = "Update an existing project.", notes = "Update an existing project.", response = Void.class, authorizations = {
+       @io.swagger.annotations.Authorization(value = "BasicAuth")
+   }, tags={ "project", })
+   @io.swagger.annotations.ApiResponses(value = { 
+       @io.swagger.annotations.ApiResponse(code = 200, message = "If update was successful", response = Void.class),
+       
+       @io.swagger.annotations.ApiResponse(code = 400, message = "If the user validation failed", response = Void.class) })
+   public Response projectIdPost( @PathParam("id") Integer id,@ApiParam(value = "" ,required=true) Project project,@Context SecurityContext securityContext)
+   throws NotFoundException {
+       return delegate.projectIdPost(id,project,securityContext);
+   }
+   @POST
+   @AuthLevel(UserRoleEnum.STANDARD)
+   @Consumes({ "application/json", "application/xml" })
+   @Produces({ "application/json" })
+   @io.swagger.annotations.ApiOperation(value = "Create a new project.", notes = "Create a new project.", response = Project.class, authorizations = {
+       @io.swagger.annotations.Authorization(value = "BasicAuth")
+   }, tags={ "project", })
+   @io.swagger.annotations.ApiResponses(value = { 
+       @io.swagger.annotations.ApiResponse(code = 200, message = "Newly created project.", response = Project.class),
+       
+       @io.swagger.annotations.ApiResponse(code = 400, message = "If the project validation failed", response = Project.class) })
+   public Response projectPost(@ApiParam(value = "" ,required=true) Project project,@Context SecurityContext securityContext)
+   throws NotFoundException {
+       return delegate.projectPost(project,securityContext);
+   }
     @DELETE
     @AuthLevel(UserRoleEnum.ADMIN)
     @Path("/{id}")
