# Implementation/bitflow-backend-parent/bitflow-backend-api/src/gen/java/de/cit/backend/api/model/User.java
@@ -1,21 +1,21 @@
 package de.cit.backend.api.model;
 
-import java.util.Objects;
-import java.util.ArrayList;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
 import java.util.Date;
-import javax.validation.constraints.*;
-import io.swagger.annotations.*;
+import java.util.Objects;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import io.swagger.annotations.ApiModelProperty;
 
 
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaResteasyServerCodegen", date = "2017-12-04T15:16:54.751+01:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaResteasyServerCodegen", date = "2018-01-27T00:00:27.767+01:00")
 public class User   {
   
   private Integer ID = null;
   private String name = null;
   private String email = null;
   private Date registeredSince = null;
+  private String password = null;
 
   /**
    **/
@@ -65,6 +65,19 @@ public class User   {
     this.registeredSince = registeredSince;
   }
 
+  /**
+   * This is only to be used when creating a new user. If sending it with another request it will be ignored. This field will never be returned from backend.
+   **/
+  
+  @ApiModelProperty(example = "pwd", value = "This is only to be used when creating a new user. If sending it with another request it will be ignored. This field will never be returned from backend.")
+  @JsonProperty("Password")
+  public String getPassword() {
+    return password;
+  }
+  public void setPassword(String password) {
+    this.password = password;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -78,12 +91,13 @@ public class User   {
     return Objects.equals(ID, user.ID) &&
         Objects.equals(name, user.name) &&
         Objects.equals(email, user.email) &&
-        Objects.equals(registeredSince, user.registeredSince);
+        Objects.equals(registeredSince, user.registeredSince) &&
+        Objects.equals(password, user.password);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(ID, name, email, registeredSince);
+    return Objects.hash(ID, name, email, registeredSince, password);
   }
 
   @Override
@@ -95,6 +109,7 @@ public class User   {
     sb.append("    name: ").append(toIndentedString(name)).append("\n");
     sb.append("    email: ").append(toIndentedString(email)).append("\n");
     sb.append("    registeredSince: ").append(toIndentedString(registeredSince)).append("\n");
+    sb.append("    password: ").append(toIndentedString(password)).append("\n");
     sb.append("}");
     return sb.toString();
   }
