# Implementation/swagger.json
@@ -50,6 +50,32 @@ paths:
           description: "If the user has no access to that project"
           schema:
             $ref: "#/definitions/ErrorMessage"
+  /project:
+    post:
+      tags: 
+      - "project"
+      summary: "Create a new project."
+      consumes:
+        - application/json
+        - application/xml
+      produces:
+        - application/json
+      description: 'Create a new project.'
+      parameters:
+        - in: "body"
+          name: "project"
+          required: true
+          schema:
+            $ref: "#/definitions/Project"
+      responses:
+        200:
+          description: "Newly created project."
+          schema:
+            $ref: "#/definitions/Project"
+        400:
+          description: "If the project validation failed"
+          schema:
+            $ref: "#/definitions/ErrorMessage"
   /project/{id}:
     get:
       tags: 
@@ -78,6 +104,34 @@ paths:
             $ref: "#/definitions/ErrorMessage"
         404:
           description: "If the project with the given id does not exist."
+          schema:
+            $ref: "#/definitions/ErrorMessage"
+    post:
+      tags: 
+      - "project"
+      summary: "Update an existing project."
+      consumes:
+        - application/json
+        - application/xml
+      produces:
+        - application/json
+      description: 'Update an existing project.'
+      parameters:
+      - name: "id"
+        in: "path"
+        required: true
+        type: integer
+        format: int32
+      - in: "body"
+        name: "project"
+        required: true
+        schema:
+          $ref: "#/definitions/Project"
+      responses:
+        200:
+          description: "If update was successful"
+        400:
+          description: "If the user validation failed"
           schema:
             $ref: "#/definitions/ErrorMessage"
     delete:
@@ -398,6 +452,43 @@ paths:
           description: "If the project with the given id does not exist."
           schema:
             $ref: "#/definitions/ErrorMessage"
+  /project/{projectId}/pipeline/{pipelineId}/history:
+    get:
+      tags: 
+      - "pipeline"
+      summary: "Get execution history."
+      consumes:
+        - application/json
+        - application/xml
+      produces:
+        - application/json
+      description: 'Query the status, date and duration of each pipeline execution.'
+      parameters:
+      - name: "projectId"
+        in: "path"
+        required: true
+        type: integer
+        format: int32
+      - name: "pipelineId"
+        in: "path"
+        required: true
+        type: integer
+        format: int32
+      responses:
+        200:
+          description: "Pipeline infos"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/PipelineHistory"
+        400:
+          description: "If the user has no access to that project"
+          schema:
+            $ref: "#/definitions/ErrorMessage"
+        404:
+          description: "If the project with the given id does not exist."
+          schema:
+            $ref: "#/definitions/ErrorMessage"
   /login:
     post:
       tags: 
@@ -706,6 +797,26 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/PipelineStep"
+  PipelineHistory:
+    type: object
+    properties:
+      ID:
+        type: integer
+        format: int32
+        example: 5
+      Status:
+        type: string
+        enum: [failed, finished, running, terminated]
+        example: "finished"
+      StartedAt:
+        type: string
+        format: date-time
+      FinishedAt:
+        type: string
+        format: date-time
+      Duration:
+        type: number
+        format: double
   User:
     type: object
     properties:
@@ -722,6 +833,10 @@ definitions:
       RegisteredSince:
         type: string
         format: date-time
+      Password:
+        type: string
+        description: "This is only to be used when creating a new user. If sending it with another request it will be ignored. This field will never be returned from backend."
+        example: "pwd"
   Project:
     type: object
     properties:
